--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <hutool-version>5.8.25</hutool-version>
     <mail-version>3.3.5</mail-version>
     <jaxb-version>2.3.1</jaxb-version>
+    <alioss-version>3.15.1</alioss-version>
   </properties>
 
   <dependencyManagement>
@@ -62,6 +63,11 @@
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>${jaxb-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.aliyun.oss</groupId>
+        <artifactId>aliyun-sdk-oss</artifactId>
+        <version>${alioss-version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
