--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
     <mail-version>3.3.5</mail-version>
     <jaxb-version>2.3.1</jaxb-version>
     <alioss-version>3.15.1</alioss-version>
+    <amqp-version>3.4.2</amqp-version>
+    <jackson-dataformat-version>2.18.2</jackson-dataformat-version>
   </properties>
 
   <dependencyManagement>
@@ -68,6 +70,17 @@
         <groupId>com.aliyun.oss</groupId>
         <artifactId>aliyun-sdk-oss</artifactId>
         <version>${alioss-version}</version>
+      </dependency>
+      <!-- rabbitMQ -->
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-amqp</artifactId>
+        <version>${amqp-version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+        <version>${jackson-dataformat-version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
